--- a/MapViewAddressList/Base.lproj/Main.storyboard
+++ b/MapViewAddressList/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </mapView>
                             <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mon-gM-h9Z">
-                                <rect key="frame" x="7" y="71" width="586" height="160"/>
+                                <rect key="frame" x="7" y="71" width="320" height="160"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" ambiguous="YES" misplaced="YES" preservesSuperviewLayoutMargins="YES" directionalLockEnabled="YES" bounces="NO" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3xq-s7-3qn">
                                         <rect key="frame" x="0.0" y="0.0" width="586" height="117"/>
@@ -36,7 +36,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalCompressionResistancePriority="751" reuseIdentifier="FullCollectionViewCell" id="nJ6-cZ-oLa" customClass="FullCollectionViewCell" customModule="MapViewAddressList" customModuleProvider="target">
+                                            <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FullCollectionViewCell" id="nJ6-cZ-oLa" customClass="FullCollectionViewCell" customModule="MapViewAddressList" customModuleProvider="target">
                                                 <rect key="frame" x="18" y="0.0" width="550" height="43"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
